[gd_scene load_steps=9 format=3 uid="uid://c3q3qq150io84"]

[ext_resource type="Script" uid="uid://bid4good3wmo4" path="res://Scripts/bar_menu.gd" id="1_avob8"]
[ext_resource type="Texture2D" uid="uid://bfdkuuvpfybj4" path="res://Assets/menu.png" id="2_nbpg0"]
[ext_resource type="Texture2D" uid="uid://chqlpf1fcrwen" path="res://Assets/button.png" id="3_qh3dk"]

[sub_resource type="LabelSettings" id="LabelSettings_c7cgl"]
font_size = 30
font_color = Color(0.011087579, 0.011087578, 0.01108758, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6sp4y"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cf2jf"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7o77m"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2pyj7"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="BarMenu" type="Node2D"]
script = ExtResource("1_avob8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(512, 384)
texture = ExtResource("2_nbpg0")

[node name="MenuLabel" type="Label" parent="CanvasLayer"]
offset_left = 389.0
offset_top = 70.0
offset_right = 526.0
offset_bottom = 112.0
scale = Vector2(1.5961539, 1.4666667)
text = "Bar Blues"
label_settings = SubResource("LabelSettings_c7cgl")

[node name="BackButton" type="Button" parent="CanvasLayer"]
offset_left = 167.0
offset_top = 460.99997
offset_right = 199.0
offset_bottom = 492.99997
scale = Vector2(2.683954, 2.7107794)
icon = ExtResource("3_qh3dk")
flat = true

[node name="SongButtons" type="Node2D" parent="CanvasLayer"]

[node name="Gold" type="Node2D" parent="CanvasLayer/SongButtons"]

[node name="Label" type="Label" parent="CanvasLayer/SongButtons/Gold"]
offset_left = 268.0
offset_top = 217.0
offset_right = 779.0
offset_bottom = 259.0
text = "Gold on the Ceiling - The Black Keys"
label_settings = SubResource("LabelSettings_6sp4y")

[node name="Button" type="Button" parent="CanvasLayer/SongButtons/Gold"]
offset_left = 169.0
offset_top = 199.0
offset_right = 201.0
offset_bottom = 231.0
scale = Vector2(2.2679534, 2.5071647)
icon = ExtResource("3_qh3dk")
flat = true

[node name="MrBlue" type="Node2D" parent="CanvasLayer/SongButtons"]

[node name="Label" type="Label" parent="CanvasLayer/SongButtons/MrBlue"]
offset_left = 271.0
offset_top = 300.0
offset_right = 812.0
offset_bottom = 342.0
text = "Mr. Blue Sky - Electric Light Orchestra"
label_settings = SubResource("LabelSettings_cf2jf")

[node name="Button" type="Button" parent="CanvasLayer/SongButtons/MrBlue"]
offset_left = 170.0
offset_top = 285.99997
offset_right = 202.0
offset_bottom = 317.99997
scale = Vector2(2.342572, 2.4542487)
icon = ExtResource("3_qh3dk")
flat = true

[node name="Three" type="Node2D" parent="CanvasLayer/SongButtons"]

[node name="Label" type="Label" parent="CanvasLayer/SongButtons/Three"]
offset_left = 274.0
offset_top = 394.0
offset_right = 712.0
offset_bottom = 436.0
text = "Three Little Birds - Bob Marley"
label_settings = SubResource("LabelSettings_7o77m")

[node name="Button" type="Button" parent="CanvasLayer/SongButtons/Three"]
offset_left = 166.00002
offset_top = 378.0
offset_right = 198.00002
offset_bottom = 410.0
scale = Vector2(2.4952416, 2.6686172)
icon = ExtResource("3_qh3dk")
flat = true

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 277.0
offset_top = 485.0
offset_right = 394.0
offset_bottom = 527.0
text = "Go Back"
label_settings = SubResource("LabelSettings_2pyj7")
